--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -276,7 +276,7 @@ void setSharedString(std::string const & s)
 typedef v8::convert::PropertyBinder PB;
 
 
-// Assume: 'proto' is out ObjectTemplate prototype.
+// Assume: 'proto' is our ObjectTemplate prototype.
 
 // Bind non-member variable directly to a JS property:
 PB::BindSharedVar<std::string, &sharedString>
@@ -297,4 +297,6 @@ PB::BindGetterSetterFunctions<std::string (),
                               ("sharedString", proto);
 }}}
 
-JS properties can be bound to native member properties similarly using the `MemberPropertyBinder` subclass of `PropertyBinder`. Note that for member binding to work, the JS class being bound must "wrap" that native class. i.e. that only works with "fully wrapped" classes.
+(Pedantic note: v8 apparently does not allow us to bind a setter without also binding a getter. My attempts to do so caused crashes.)
+
+JS properties can be bound to native _member_ properties similarly using the `MemberPropertyBinder` subclass of `PropertyBinder`. Note that for member binding to work, the JS class being bound must "wrap" that native class. i.e. that only works with "fully wrapped" classes.
