--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -11,6 +11,9 @@ are at the top. Dates written extra large are release dates. This contains only 
 
 ----
 
+*2011 Feb 2*
+  * Added several const-overload-resolution fixes to templates in the the v8::juice::convert API.
+
 *2011 Jan 23*
   * Added the [V8Convert v8::convert] sub-project.
 
