Edited wiki page Contributing through web user interface.

--- a/wiki/Contributing.wiki
+++ b/wiki/Contributing.wiki
@@ -29,6 +29,6 @@ Other than that, i'm pretty much open to anything.
 
 So far they include:
   * [http://wanderinghorse.net/home/stephan Stephan Beal] is the primary architect and author.
-  * Anton Yemelyan joined the project in March 2011 to try to get the code working on Windows.
+  * Anton Yemelyan joined the project in March 2011 to try to get the code working on Windows, and is using it in projects developed at [http://www.smartvision.com/ LSI SACO Technologies Inc].
   * Rob Tsuk has contributed several fixes and made a number of suggestions which led to new features or fundamental improvements.
   * The folks at [http://groups.google.com/group/v8-users] have been very helpful in all things related to v8.
