--- a/wiki/JSPDO.wiki
+++ b/wiki/JSPDO.wiki
@@ -34,7 +34,9 @@ The more significant ones:
 TODO: document how to do this.
 
 
-=Connecting to a Database=
+=Connecting and Disconnecting=
+
+To make a connection:
 
 {{{
 var db = new JSPDO("sqlite3:/path/to/db.sqlite3");
@@ -43,6 +45,14 @@ db = new JSPDO("mysql5:dbname=mydb;host=localhost","username", "password");
 }}}
 
 The MySQL driver supports several options not shown here, [http://whiki.wanderinghorse.net/wikis/cpdo/?page=cpdo_mysql5 as documented in the cpdo wiki].
+
+To disconnect:
+
+{{{
+drv.close();
+}}}
+
+After calling `close()`, calling any further calls to member functions will cause a JS-side exception to be triggered.
 
 =Important Details to Keep in Mind=
 
@@ -137,6 +147,17 @@ finally {
     if( st ) st.finalize(); // this is very important!!!
 }
 }}}
+
+==Cleaning Up==
+
+_Always_ call `finalize()` when you are done with statement/result set object:
+
+{{{
+st.finalize();
+}}}
+
+
+After calling `finalize()`, calling any further calls to member functions will cause a JS-side exception to be triggered.
 
 =Caveats and Gotchas=
 
