--- a/wiki/JSPDO.wiki
+++ b/wiki/JSPDO.wiki
@@ -70,9 +70,11 @@ This API will optimistically try to read BLOB fields as !JavaScript string data 
 
 There are _no plans_ to add any direct binary data support to this API, as binary data is well outside of !JavaScript's comfort zone and i don't want to open up that can of worms.
 
-==#4: Ummm...==
+==#4: Data Types ==
 
-i had another point to make and it's slipped my mind for the time being.
+This code only explicitly accounts for numeric and string data, and there are some notable limitations regarding numbers. v8's `Integer` type only supports 32 bits. Thus this library tries to use `double` for integers of greater than 32 bits. It is conceivable that some floating-point numeric precision will be lost, depending on the underlying db driver and the exact field definitions.
+
+When binding JS values to database fields for purposes of inserting data, this code tries its best to do the right thing, but it is possible that a specific db driver, or slightly different database table definition, will behave differently than another when it comes to numeric precision, maximum field length, and similar details. It is recommended that databases used with this code avoid constructs like 1-byte integer fields and similar things which may cause unexpected failures at runtime (depending on the driver). e.g. if the underlying native driver returns an error because we inserted the value 500 to a 1-byte integer field, then that will show up as a JS-side exception via this interface.
 
 =Queries=
 
@@ -182,9 +184,8 @@ Unless noted otherwise, the APIs report any "serious" errors via exceptions. Som
 
 This class is synonymous with a database connection.
 
-
 || *Method* || *Description* ||
-|| `JSPDO(dsn[,userName,password])` || Connects to the database described in the given DSN string. ||
+|| `JSPDO(dsn[,userName,password])` || Connects to the database described in the given DSN string. See [http://whiki.wanderinghorse.net/wikis/cpdo/?page=DSN the cpdo wiki for details]. ||
 || `void exec(string)` || Executes simple SQL statements (those not returning values). ||
 || `Statement prepare(string)` || "Prepares" SQL code for execution. This is the only legal way to construct Statement objects. ||
 || `close()` || Closes the db connection and frees any C-level resources allocated for the connection, _except_ for Statements, which _must_ be `finalize()`d _before_ their db is closed. ||
@@ -200,19 +201,47 @@ This class is synonymous with a database connection.
 
 ==Statements/Result Sets==
 
-These objects are _only_ created by calling `JSPDO.prepare()`, and not via a constructor call. The constructor for this class is, in fact, an anonymous function with no publicly-visible name. This class represents (like in PHP's PDO API) both prepared `INSERT` (or similar) statements and for the conventional "result-set" data. This merging of functionality was inspired by PHP's PDO (which i happen to quite like).
+This class represents (like in PHP's PDO API) both prepared `INSERT` (or similar) statements and for the conventional "result-set" data. This merging of functionality was inspired by PHP's PDO (which i happen to quite like).
+
+These objects are _only_ created by calling `JSPDO.prepare()`, and not via a constructor call. The constructor for this class is, in fact, an anonymous function with no publicly-visible name.
 
 || *Method* || *Description* ||
-|| `void bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index. ||
+|| `void bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index. The _type_ of the property determines how the value is bound (e.g. as an integer, double, or string). ||
 || `bool step()` || "Steps" one row through a result set or executes a non-result query. Returns false if it is at the end of the set (or the query had no data to return, like an `INSERT`) or true if it successfully fetched a row. ||
 || `Array stepArray()` || Like `step()` but returns all of the columns from the fetched row as an array of values. It returns `null` at the end of the result set. ||
-|| `mixed get(index)` || Returns a value from a fetched row, using the given _0-based_ column index. (The inconsistency is not mine - that's just how SQL APIs work!) This function _must not ever_ be called unless `step()` has returned true. Violating that leads to undefined behaviour. The JS type of the returned value will be deduced based on the database's data type. That basically means numbers "should" carry over as-is and everything else will be treated as a string. ||
+|| `mixed get(index)` || Returns a value from a fetched row, using the given _0-based_ column index. (The inconsistency is not mine - that's just how SQL APIs work!) This function _must not ever_ be called unless `step()` has returned true. Violating that leads to undefined behaviour. The JS type of the returned value will be deduced based on the database's data type. That basically means numbers "should" carry over as-is, SQL `NULL` translates to `null`, and everything else will be treated as a string. ||
 || `string columnName(index)` || The name of the 0-based result set column. ||
 || `int columnType(index)` || The cpdo-defined type ID for row data from the given 0-based column index. (Do not rely on stable values between releases!) ||
 || `void reset()` || Re-sets all bound parameters to their pre-`bind()` state. Not normally needed, but useful when looping over a statement and only updating a subset of the columns on each iteration. ||
-|| `int paramIndex(string)` || Returns the index of the given named bound parameter. When using MySQL (which doesn't natively support named parameters), please read [http://whiki.wanderinghorse.net/wikis/cpdo/?page=cpdo_mysql5 the fine manual] regarding potential caveats. ||
+|| `int paramIndex(string)` || Returns the 1-based index of the given named bound parameter, or 0 if no such parameter is found. When using MySQL (which doesn't natively support named parameters), please read [http://whiki.wanderinghorse.net/wikis/cpdo/?page=cpdo_mysql5 the fine manual] regarding potential caveats. ||
 || *Property* (read-only!) || *Description* ||
 || `int errorCode` || The most recent error code (driver-specific). May be cleared by the next call into the API. The code 0 is universally understood as success and a non-0 value is driver-dependent. ||
 || `string errorText` || The most recent error string (driver-specific). May be cleared by the next call into the API. ||
 || `int paramCount` || The number of bound parameters in a prepared statement. ||
 || `int columnCount` || The number of columns in the current result set. ||
+
+The majority of the functions report errors via exceptions. Because of that, statement-handling code _really really really should always_  be wrapped in a `try/finally` block, like this:
+
+{{{
+var st;
+try {
+    st = mydb.prepare(...);
+    ... use st ...
+}
+finally { if(st) st.finalize(); }
+}}}
+
+Note that the `catch` part is optional - if it's not there then the behaviour is as if we had written `catch(e){throw e;}`. The important part is that the `finally` block is always executed, regardless of whether or not we catch the exception.
+
+We could rewrite the above example a bit more briefly:
+
+
+{{{
+var st = mydb.prepare(...);
+try {
+    ... use st ...
+}
+finally { st.finalize(); }
+}}}
+
+There _may_ a subtle difference, however, depending on the code's context. `mydb.prepare()` might throw. In the second example, we would not catch that exception, but instead propagate it up the stack chain. Because of that, the `finally` block doesn't need to check if `st` was set. However, in some code constructs blindly propagating that exception might lead to resource leaks stemming from _other_ native objects which have specific cleanup requirements.
