Edited wiki page ConvertingTypes through web user interface.

--- a/wiki/ConvertingTypes.wiki
+++ b/wiki/ConvertingTypes.wiki
@@ -3,9 +3,11 @@
 
 <wiki:toc max_depth="3" />
 
-*See also:* [V8Convert], which provides a standalone distribution of the API described below.
+*See also:* [V8Convert], which provides a standalone, header-only distribution of the API described below (but uses a different namespace).
 
 = An introduction to the `v8::juice::convert` API =
+
+(These docs also apply to the [V8Convert v8::convert API].)
 
 Juice comes with an API for casting between JS types and native types. While v8 of course provides convenience routines like `Value::IntegerValue()` and `Value::ToString()`, that leaves us with two limitations:
 
