--- a/wiki/JSPDO.wiki
+++ b/wiki/JSPDO.wiki
@@ -193,11 +193,19 @@ This class is synonymous with a database connection.
 || `begin()` || Starts a transaction. Nested transactions are not supported. ||
 || `commit()` || Commits the current opened transaction. ||
 || `rollback()` || Rolls back the current transaction. ||
-|| *Property* (read-only!) || *Description* ||
+
+Instance properties (read-only!):
+
 || `string driverName` || The name of the underlying driver ("sqlite3" or "mysql5"). ||
 || `int errorCode` || The most recent error code (driver-specific). May be cleared by the next call into the API. The code 0 is universally understood as success and a non-0 value is driver-dependent. ||
 || `string errorText` || The most recent error string (driver-specific). May be cleared by the next call into the API. ||
+
+
+Class-level properties (read-only!) (properties of the constructor function):
+
+|| `Array driverList` || A list of the names of all available database drivers. ||
 || `Object columnTypes` || Mapping of symbolic names to integer values for use with the `columnType()` member of the statement class. ||
+
 
 ==Statements/Result Sets==
 
@@ -207,6 +215,7 @@ These objects are _only_ created by calling `JSPDO.prepare()`, and not via a con
 
 || *Method* || *Description* ||
 || `void bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index. The _type_ of the property determines how the value is bound (e.g. as an integer, double, or string). ||
+|| `void bind(Array)` || Binds each value in the given array to the next subsequent bindable paramter. e.g. `bind([7,null,11])` binds parameters 1 to 3 with the given values. ||
 || `bool step()` || "Steps" one row through a result set or executes a non-result query. Returns false if it is at the end of the set (or the query had no data to return, like an `INSERT`) or true if it successfully fetched a row. ||
 || `Array stepArray()` || Like `step()` but returns all of the columns from the fetched row as an array of values. It returns `null` at the end of the result set. ||
 || `mixed get(index)` || Returns a value from a fetched row, using the given _0-based_ column index. (The inconsistency is not mine - that's just how SQL APIs work!) This function _must not ever_ be called unless `step()` has returned true. Violating that leads to undefined behaviour. The JS type of the returned value will be deduced based on the database's data type. That basically means numbers "should" carry over as-is, SQL `NULL` translates to `null`, and everything else will be treated as a string. ||
@@ -214,7 +223,9 @@ These objects are _only_ created by calling `JSPDO.prepare()`, and not via a con
 || `int columnType(index)` || The cpdo-defined type ID for row data from the given 0-based column index. (Do not rely on stable values between releases!) ||
 || `void reset()` || Re-sets all bound parameters to their pre-`bind()` state. Not normally needed, but useful when looping over a statement and only updating a subset of the columns on each iteration. ||
 || `int paramIndex(string)` || Returns the 1-based index of the given named bound parameter, or 0 if no such parameter is found. When using MySQL (which doesn't natively support named parameters), please read [http://whiki.wanderinghorse.net/wikis/cpdo/?page=cpdo_mysql5 the fine manual] regarding potential caveats. ||
-|| *Property* (read-only!) || *Description* ||
+
+Instance properties (read-only!):
+
 || `int errorCode` || The most recent error code (driver-specific). May be cleared by the next call into the API. The code 0 is universally understood as success and a non-0 value is driver-dependent. ||
 || `string errorText` || The most recent error string (driver-specific). May be cleared by the next call into the API. ||
 || `int paramCount` || The number of bound parameters in a prepared statement. ||
