--- a/wiki/JSPDO.wiki
+++ b/wiki/JSPDO.wiki
@@ -118,6 +118,7 @@ These objects are _only_ created by calling `JSPDO.prepare()`, and not via a con
 || *Method* || *Description* ||
 || `void bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index or name (in the form `:paramName`). The _type_ of the given value determines how the value is bound (e.g. as an integer, double, or string). ||
 || `void bind(Array)` || Binds each value in the given array to the next subsequent bindable paramter. e.g. `bind([7,null,11])` binds parameters 1 to 3 with the given values. ||
+|| `void bind(Object)` || Binds each key/value pair in the given object, treating the object's keys as bound parameter names. e.g. `bind({':p1',':p2':...})` ||
 || `bool step()` || "Steps" one row through a result set or executes a non-result query. Returns false if it is at the end of the set (or the query had no data to return, like an `INSERT`) or true if it successfully fetched a row. ||
 || `Array stepArray()` || Like `step()` but returns all of the columns from the fetched row as an array of values. It returns `null` at the end of the result set. ||
 || `mixed get(index)` || Returns a value from a fetched row, using the given _0-based_ column index. (The inconsistency is not mine - that's just how SQL APIs work!) This function _must not ever_ be called unless `step()` has returned true. Violating that leads to undefined behaviour. The JS type of the returned value will be deduced based on the database's data type. That basically means numbers "should" carry over as-is, SQL `NULL` translates to `null`, and everything else will be treated as a string. ||
@@ -194,9 +195,10 @@ You can also bind parameters by name, but it is not recommended that one mix nam
 {{{
 var st;
 try {
-   st = db.prepare("INSERT INTO mytbl(a,b) VALUES(:pA, :pB)");
+   st = db.prepare("INSERT INTO mytbl(a,b,c) VALUES(:pA, :pB, :pC)");
    st.bind(":pA", "hi, world");
-   st.bind(":pB", 42 );
+   // Bind several named parameters at once by using an object:
+   st.bind({":pB":42, ":pC": "..."});
    st.step();
 }
 finally {
